--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: chatup-db-api
+name: db-api
 channels:
         - conda-forge
 dependencies:
@@ -17,6 +17,5 @@ dependencies:
         - pip:
                 - config-probe
                 - pytest-cov
-                - ShopifyAPI
                 - tox-conda
 
